# commsSetUpTests

./: .gitignore  LICENSE  README.md  pyproject.toml  run_demo.py
src/seadigest/: __init__.py  _data.py  _gooey.py  plots.py
